tests/ui/bytes_param/invalid_int_value.stderr
error: encountered malformatted integer value for `bytes` parameter: invalid digit found in string
 --> tests/ui/bytes_param/invalid_int_value.rs:4:20
  |
4 | #[bitfield(bytes = -1)]
  |                    ^
